templates/Sparkle/assets/css/main.css
/* ... */
/* FOOTER */
footer {
	clear:both;
	text-align:center;
	color:#888;
	font-size:10px!important;
	padding:10px 0;
	bottom:0;
}

footer a,footer a:active,footer a:visited {
	color:#888;
}

footer img {
	margin:0 2px 3px 0;
	height:13px;
}

.login, .errorbox {
	background-color:#fff;
	margin:9%;
	margin-left:auto;
	margin-right:auto;
	margin-bottom:12px;
	width:500px;
	box-shadow:rgba(0,0,0,0.34902) 0 1px 3px 0;
}

.login div.warningcontainer, .login div.errorcontainer, .login div.successcontainer {
	margin:10px!important;
}

.errorbox {
	width:800px;
}

.installsec {
	margin-top:10px;
	padding:0;
	text-align:left;
}

.loginsec, .errorsec {
	margin-top:10px;
	padding:10px 0;
	text-align:center;
}

.errorsec {
	padding:10px;
}

.loginsec form {
	width:400px;
	margin:0 auto;
	text-align:left;
}

.loginsec fieldset {
	border:0;
	float:left;
	clear:left;
	width:100%;
	margin:0 0 10px;
	padding:0;
}

.loginsec legend {
	display:none;
}

.loginsec label {
	float:left;
	width:10em;
	margin-right:1em;
	margin-top:6px;
	text-align:right;
}

.loginsec input[type="text"], .loginsec input[type="password"] {
	width:183px;
}

.loginsec select {
	width:213px;
}

p.submit {
	text-align:right;
	padding-right:46px;
}

.loginsec aside,.errorsec aside {
	border-top:1px solid #d1d5d8;
	clear:both;
	float:none;
	width:auto;
	text-align:left;
	padding:10px 10px 0;
}

aside.right {
	text-align:right;
}

.messagewrapper {
	width:650px;
	margin:0 auto;
	padding:120px 0 0;
	overflow:hidden;
}

.messagewrapperfull {
	width:100%;
	margin:0 auto;
	padding:0;
	overflow:hidden;
}

.overviewsearch {
	float:right;
	font-size:80%;
	text-align:right;
}

.overviewsearch input[type="text"] {
	width:150px;
}

.overviewadd {
	padding:10px;
	font-weight:700;
}

/*
 * error message display
 */
.errorcontainer {
	background:url(../img/icons/error_big.png) 10px center no-repeat #ffedef;
	border:1px solid #ffc2ca;
	padding:10px 10px 10px 68px!important;
	margin:10px 0!important;
	text-align:left!important;
	overflow:hidden;
	box-shadow:0 0 0 #000;
}

.errortitle {
	font-weight:700;
	color:#c00!important;
}

.error {
	font-weight:400!important;
	color:#c00!important;
}

/*
 * warning message display
 */
.warningcontainer,.ui-dialog {
	background:url(../img/icons/warning_big.png) 10px center no-repeat #fffecc;
	border:1px solid #f3c37e;
	padding:10px 10px 10px 68px!important;
	margin:10px 0!important;
	text-align:left!important;
	overflow:hidden;
	box-shadow:0 0 0 #000;
}

.ui-dialog {
	padding:10px!important;
}

.warningtitle,.ui-dialog-titlebar {
	font-weight:700;
	color:#D57D00;
}

.warning,.ui-dialog-content {
	color:#D57D00!important;
}

/*
 * success message display
 */
.successcontainer {
	background:url(../img/icons/ok_big.png) 10px center no-repeat #E2F9E3;
	border:1px solid #9C9;
	padding:10px 10px 10px 68px!important;
	margin:10px 0!important;
	text-align:left!important;
	overflow:hidden;
	box-shadow:0 0 0 #000;
}

.successtitle {
	font-weight:700;
	color:#060!important;
}

.success {
	font-weight:400!important;
}

/*
 * neutral/info message display
 */
.neutralcontainer {
	background:url(../img/icons/info_big.png) 10px center no-repeat #d2eaf6;
	border:1px solid #b7d8ed;
	padding:10px 10px 10px 68px!important;
	margin:10px 0!important;
	text-align:left!important;
	overflow:hidden;
	box-shadow:0 0 0 #000;
}

.neutraltitle {
	font-weight:700;
	color:#3188c1!important;
}

.neutral {
	font-weight:400!important;
	color:#3188c1!important;
}

/* std hyperlink */
a,a:active,a:visited {
	color:#176fa1;
	text-decoration:none;
}

a:hover {
	text-decoration:underline;
}

a.active {
	font-weight:700;
}

/* navigation */
nav {
	float:left;
	width:230px;
	background-color:#f7f8fa;
	min-height:500px;
	padding-top: 10px;
}

nav div:first-child {
	display:none;
}

nav div:nth-child(2) {
	border-top:0!important;
}

.menuelement {
	margin:0 15px;
	padding:15px 0 15px 5px;
	border-bottom:1px solid #e1e7f0;
	border-top:1px solid #fff;
}

nav div:last-child {
	border-bottom:0!important;
}

.menuelement h4 {
	background:transparent url(../img/icons/tag_blue.png) no-repeat center left;
	font-weight:700;
	margin:0;
	padding:0 0 0 20px;
	color:#626976;
}

.menuelement h4 a {
	color:#626976;
}

.menuelement ul {
	list-style:none;
	margin:3px 0 0;
	padding:0;
}

.menuelement ul li {
	margin:2px 0 2px 20px;
	padding:0;
}

.noborder {
	width:100%;
	border-spacing:0;
	border-collapse:separate;
	border:0;
}

/* TABLES */
table {
	border-radius: 3px;
	border: 1px solid #d1d5d8;
	border-spacing: 0;
	border-collapse: separate;
}

table thead th, table th {
	border-bottom: 1px solid #d1d5d8;
	height: 25px;
	padding: 5px 0 5px 8px;
	background-color: #e9edf0;
	font-weight: 700;
}

table tr.section:not(:first-child) th {
	border-top: 1px solid #d1d5d8;
}

table tbody tr td {
	border-bottom:1px solid #f1f2f3;
}
table tbody tr:last-child td {
	border-bottom: none;
}

table.hl tbody tr:hover {
	background-color: #f5f5f5;
}

table tfoot tr td {
	height:25px;
	border-top:1px solid #d1d5d8;
	background-color:#f2f8fa;
	padding-right: 0px;
}

table td {
	padding: 5px 10px;
	height: 25px;
    min-height: 25px;
}

table th.right, table td.right {
	text-align: right;
}

table.tiny {
	width: 400px;
}
table.middle {
	width: 600px;
}
table.full {
	width: 100%;
}
table.center {
	margin: 0 auto;
}
table tr.top {
	vertical-align: top;
}
tr.disabled td, tr.disabled td a {
	color:#cfcfcf;
}

/* ADMIN/CUSTOMER BARS */
.overviewcustomerextras {
	line-height:15px;
	font-size:10px;
	width:250px;
	padding-top:3px;
	padding-bottom:3px;
}

.overviewcustomerextras span {
	width:60px;
	float:left;
}

/* INPUT ELEMENTS */
input {
	background:#fff url(../img/icons/text_align_left.png) no-repeat 5px 4px;
	color: #333;
	padding:1px 4px 2px 24px;
	height:23px;
	border:1px solid #d9d9d9;
	margin-bottom:5px;
	border-radius:3px;
}
/* ... */

